tests/errors/test-overload-error.sac
// SAC_TEST|include common.mk
// SAC_TEST|SAC2C_FLAGS += -check tc -b 5:cwf
// SAC_TEST|CALL_SAC2C := $(SAC2C) $(SAC2C_FLAGS)
//
// SAC_TEST|all: <file-name>
// SAC_TEST|<tab>OUTPUT=`$(CALL_SAC2C) $< 2>&1`; <nlslash>
// SAC_TEST|<tab>echo "$$OUTPUT" | grep -E "^.*:[[:digit:]]+: abort:$$" | $(GREP_COMMAND_OUTPUT) "" 1; <nlslash>
// SAC_TEST|<tab>echo "$$OUTPUT" | grep -F "  Cannot overload functions of arity 0" | $(GREP_COMMAND_OUTPUT) "" 1; <nlslash>

int main ()
{
  return 0;
}

int main()
{
  return 1;
}